--- a/smetro/views/admin/admindashboard.ejs
+++ b/smetro/views/admin/admindashboard.ejs
@@ -15,98 +15,127 @@
 </head>
 
 <body>
-    <%-include('../partials/navadmin') %>
+    <section class="vh-1000" style="background-image: url('../img/metro4.jpg'); 
+            background-size: cover; background-position: center; margin-top: -10px;">
+            <%-include('../partials/navadmin') %>
+            
+            <h1 class="mb-3 text-white text-center" style="margin-top: 50px;">Available Tickets</h1>
 
-    <div class="container my-4">
-        <div class="jumbotron">
+            <div class="container py-5 h-100" style="max-width: 90%">
+                <div class="row d-flex justify-content-center h-100">
+                <div class="col col-xl-10">
 
-            <h1 class="text-center">Add route fare</h1>
-            <form action="/admin/addroute" method="post">
-    
-                <div class="form-row">
-                    <div class="col">
-                        <label for="departure">From:</label>
-                        <input type="text" maxlength="20" class="form-control" id="departure" name="departure" required>
+
+
+
+
+
+                <!-- Paste rest of the code -->
+                <div class="container my-4">
+                    <div class="jumbotron">
+            
+                        <h1 class="text-center">Add route fare</h1>
+                        <form action="/admin/addroute" method="post">
+                
+                            <div class="form-row">
+                                <div class="col">
+                                    <label for="departure">From:</label>
+                                    <input type="text" maxlength="20" class="form-control" id="departure" name="departure" required>
+                                </div>
+                                <div class="col">
+                                    <label for="destination">To:</label>
+                                    <input type="text" maxlength="20" class="form-control" id="destination" name="destination" required>
+                                </div>
+                            </div>
+                              <br>
+                              <div class="form-row">
+                                  <div class="col">
+                                    <label for="amount">Amount</label>
+                                    <input type="text" class="form-control" id="amount" name="amount" required>
+                                  </div>
+                              </div>
+                              <br>
+                    
+                            <button type="submit" class="btn btn-success">Add Route Fare</button><br><br>
+                        </form>
                     </div>
-                    <div class="col">
-                        <label for="destination">To:</label>
-                        <input type="text" maxlength="20" class="form-control" id="destination" name="destination" required>
+            
+                    
+            
+            
+            
+            
+            
+                    
+                    
+                    <div class="card shadow mb-4 my-2">
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-info text-center">Fare List</h6>
+                        </div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table table-borderless" id="dataTable" width="100%" cellspacing="0">
+                                    <thead>
+                                        <tr>
+                                            <th>Fare ID</th>
+                                            <th>From</th>
+                                            <th>To</th>
+                                            <th>Fare</th>
+                                            <th>Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <% results.rows.forEach(function(data) { %>
+                                            <tr>
+                                                <td>
+                                                    <%= data.fareid %>
+                                                </td>
+                                                <td>
+                                                    <%= data.departure %>
+                                                </td>
+                                                <td>
+                                                    <%= data.destination %>
+                                                </td>
+                                                <td>
+                                                    <%= data.amount %>
+                                                </td>
+                                                <td>
+                                                    <form action="/admin/deletefare" method="post">
+                                                        <input type="hidden" maxlength="50" class="form-control" 
+                                                        id="deletefare" name="deletefare" aria-describedby="emailHelp" value=<%=data.fareid %> required>
+                                                        <button type="submit" class="btn btn-danger">Delete</button><br><br>
+                                                    </form>
+                                                    
+                                                </td>
+                                            </tr>
+                                        <% }); %>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
+            
+            
+            
+            
+            
+            
                 </div>
-                  <br>
-                  <div class="form-row">
-                      <div class="col">
-                        <label for="amount">Amount</label>
-                        <input type="text" class="form-control" id="amount" name="amount" required>
-                      </div>
-                  </div>
-                  <br>
-        
-                <button type="submit" class="btn btn-success">Add Route Fare</button><br><br>
-            </form>
-        </div>
-
-        
+                <!-- Paste rest of the code -->
 
 
 
 
 
-        
-        
-        <div class="card shadow mb-4 my-2">
-            <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-info text-center">Fare List</h6>
+
+
+
+                
+              </div>
             </div>
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table table-borderless" id="dataTable" width="100%" cellspacing="0">
-                        <thead>
-                            <tr>
-                                <th>Fare ID</th>
-                                <th>From</th>
-                                <th>To</th>
-                                <th>Fare</th>
-                                <th>Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <% results.rows.forEach(function(data) { %>
-                                <tr>
-                                    <td>
-                                        <%= data.fareid %>
-                                    </td>
-                                    <td>
-                                        <%= data.departure %>
-                                    </td>
-                                    <td>
-                                        <%= data.destination %>
-                                    </td>
-                                    <td>
-                                        <%= data.amount %>
-                                    </td>
-                                    <td>
-                                        <form action="/admin/deletefare" method="post">
-                                            <input type="hidden" maxlength="50" class="form-control" 
-                                            id="deletefare" name="deletefare" aria-describedby="emailHelp" value=<%=data.fareid %> required>
-                                            <button type="submit" class="btn btn-danger">Delete</button><br><br>
-                                        </form>
-                                        
-                                    </td>
-                                </tr>
-                            <% }); %>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-
-
-
-
-
-
-    </div>
+          </div>
+        </section>
+      </div>
 
     <%-include('../partials/footer') %>
     
