--- a/smetro/views/admin/stuckpassengers.ejs
+++ b/smetro/views/admin/stuckpassengers.ejs
@@ -15,64 +15,79 @@
 </head>
 
 <body>
-    <%-include('../partials/navadmin') %>
+    
+    <section class="vh-100" style="background-image: url('../img/metro4.jpg'); 
+            background-size: cover; background-position: center; margin-top: -10px;">
+            <%-include('../partials/navadmin') %>
+            
+            <h1 class="mb-3 text-white text-center" style="margin-top: 50px;">Available Tickets</h1>
 
-    <div class="container my-4">
-        <div class="jumbotron">
-            <h1 class="text-center">Due payments</h1>
-            <div class="card shadow mb-4 my-2">
-                <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-info text-center">List of Dues</h6>
-                </div>
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table table-borderless" id="dataTable" width="100%" cellspacing="0">
-                            <thead>
-                                <tr>
-                                    <th>Resevation ID</th>
-                                    <th>Name</th>
-                                    <th>Phone Number</th>
-                                    <th>Extra charge</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <% results.rows.forEach(function(data) { %>
-                                    <tr>
-                                        <td>
-                                            <%= data.reservationid %>
-                                        </td>
-                                        <td>
-                                            <%= data.username %>
-                                        </td>
-                                        <td>
-                                            <%= data.userphone %>
-                                        </td>
-                                        <td>
-                                            <%= data.extracharge.toFixed(2) %>
-                                        </td>
-                                        <td>
-                                            <form action="/admin/release" method="post">
-                                                <input type="hidden" maxlength="50" class="form-control" 
-                                                id="reservationid" name="reservationid" aria-describedby="emailHelp" value=<%= data.reservationid %> required>
-                                                <button type="submit" class="btn btn-danger">Release</button><br><br>
-                                            </form>
-                                            
-                                        </td>
-                                    </tr>
-                                <% }); %>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>  
-        </div>
+            <div class="container py-5 h-100" style="max-width: 90%">
+                <div class="row d-flex justify-content-center h-100">
+                <div class="col col-xl-10">
+
+                    <!-- Paste rest of the code -->
+                    <div class="container my-4">
+                        <div class="jumbotron">
+                            <h1 class="text-center">Due payments</h1>
+                            <div class="card shadow mb-4 my-2">
+                                <div class="card-header py-3">
+                                    <h6 class="m-0 font-weight-bold text-info text-center">List of Dues</h6>
+                                </div>
+                                <div class="card-body">
+                                    <div class="table-responsive">
+                                        <table class="table table-borderless" id="dataTable" width="100%" cellspacing="0">
+                                            <thead>
+                                                <tr>
+                                                    <th>Resevation ID</th>
+                                                    <th>Name</th>
+                                                    <th>Phone Number</th>
+                                                    <th>Extra charge</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <% results.rows.forEach(function(data) { %>
+                                                    <tr>
+                                                        <td>
+                                                            <%= data.reservationid %>
+                                                        </td>
+                                                        <td>
+                                                            <%= data.username %>
+                                                        </td>
+                                                        <td>
+                                                            <%= data.userphone %>
+                                                        </td>
+                                                        <td>
+                                                            <%= data.extracharge.toFixed(2) %>
+                                                        </td>
+                                                        <td>
+                                                            <form action="/admin/release" method="post">
+                                                                <input type="hidden" maxlength="50" class="form-control" 
+                                                                id="reservationid" name="reservationid" aria-describedby="emailHelp" value=<%= data.reservationid %> required>
+                                                                <button type="submit" class="btn btn-danger">Release</button><br><br>
+                                                            </form>
+                                                            
+                                                        </td>
+                                                    </tr>
+                                                <% }); %>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>  
+                        </div>
+                    <!-- Paste rest of the code -->
 
 
 
 
 
+                
+            </div>
+          </div>
+        </section>
+      </div>
 
-    </div>
 
     <%-include('../partials/footer') %>
     
