--- a/Demo Frontend/muaz/admindashboard.ejs
+++ b/Demo Frontend/muaz/admindashboard.ejs
@@ -81,6 +81,8 @@
 </head>
 
 <body>
+    <section class="vh-1000" style="background-image: url('../img/metro4.jpg'); 
+            background-size: cover; background-position: center; margin-top: -10px;">
     <%-include('../partials/navadmin') %>
 
     <div class="container my-4">
