--- a/smetro/views/admin/adminlogin.ejs
+++ b/smetro/views/admin/adminlogin.ejs
@@ -2,51 +2,96 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <title>Admin Login</title>
+    <%-include('../partials/header') %>
+    <title>Login</title>
 </head>
 
 <body>
-    <%-include('../partials/nav') %>
-    <%if(messages.error){
-        %>
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>Sorry!</strong> <%=messages.error%>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+  <% if (messages.error) { %>
+    <div class="modal fade show" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="errorModalLabel">Sorry!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <%= messages.error %>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
         </div>
-        <%
-        delete error;
-    } %>
-    
-
-    <div class="container my-4">
-        <h1 class="text-center">Log in to SMetro as Admin</h1>
-        <form action="/admin/adminlogin" method="post">
-
-            <div class="form-group">
-                <label for="adminemail">Email</label>
-                <input type="adminemail" maxlength="50" class="form-control" id="adminemail" name="adminemail"
-                    aria-describedby="emailHelp" required>
-            </div>
-
-            
-            <div class="form-group">
-                <label for="adminpassword">Password</label>
-                <input type="password" maxlength="23" class="form-control" id="adminpassword" name="adminpassword" required>
-            </div>
-
-            <button type="submit" class="btn btn-primary">Log In</button><br><br>
-        </form>
     </div>
+    <script>
+        $(document).ready(function () {
+                $('#errorModal').modal('show');
+                setTimeout(function () {
+                    $('#errorModal').modal('hide');
+                }, 3000);
+            });
+    </script>
+    <% delete messages.error; %>
+<% } %>
+
+    
+    <div>
+      <section class="vh-100" style="background-color: #af4c2e; margin-top: -50px;">
+        <%-include('../partials/nav') %>
+        <div class="container py-5 h-100">
+          <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col col-xl-10">
+              <div class="card" style="border-radius: 1rem;">
+                <div class="row g-0">
+                  <div class="col-md-6 col-lg-5 d-none d-md-block">
+                    <img src="../img/metro2.jpg" alt="login form" class="img-fluid fit-section-image"
+                      style="border-radius: 1rem 0 0 1rem;" />
+                  </div>
+                  <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                    <div class="card-body p-4 p-lg-5 text-black">
+      
+                      <!-- Rest of the form code -->
+                      <form action="/admin/adminlogin" method="post">
+      
+                        <div class="d-flex align-items-center mb-3 pb-1">
+                          <i class="fas fa-train fa-2x me-3" style="color: #ff6219;"></i>
+                          <span class="h1 fw-bold mb-0">SMetro</span>
+                          
+                        </div>
+      
+                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+      
+                        <div class="form-outline mb-4">
+                          <input type="text" class="form-control form-control-lg" maxlength="50" id="adminemail" name="adminemail"
+                          aria-describedby="emailHelp" required/>
+                          <label class="form-label" for="email">Email address</label>
+                        </div>
+      
+                        <div class="form-outline mb-4">
+                        <input type="password" maxlength="23" class="form-control form-control-lg"  id="adminpassword" name="adminpassword" required>
+                          <label class="form-label" for="password">Password</label>
+                        </div>
+      
+                        <div class="pt-1 mb-4">
+                          <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+      
+
+
+    <%-include('../partials/footer') %>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
