--- a/smetro/views/user/prevtickets.ejs
+++ b/smetro/views/user/prevtickets.ejs
@@ -195,150 +195,118 @@
 
 
     <%-include('../partials/header') %>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
-        integrity="sha256-3sPp8BkKUE7QyPSl6VfBByBroQbKxKG7tsusY2mhbVY=" crossorigin="anonymous" />
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
+            integrity="sha256-3sPp8BkKUE7QyPSl6VfBByBroQbKxKG7tsusY2mhbVY=" crossorigin="anonymous" />
 
-    <title>Book Ticket</title>
+        <title>Book Ticket</title>
 </head>
 
 <body>
 
-    
-    
-    
-    
-    
-    
+
+
+
+
+
+
     <!-- <section class="vh-100" style=" background-color: #20315e; margin-top: -10px"> -->
         <section class="vh-1000" style="background-image: url('../img/metro4.jpg'); 
             background-size: cover; background-position: center; margin-top: -10px;">
-            <%-include('../partials/navlogged') %>
-            
-            <h1 class="mb-3 text-white text-center" style="margin-top: 50px;">Eligible Tickets</h1>
-
-            <div class="container py-5 h-100" style="max-width: 90%">
-                <div class="row d-flex justify-content-center h-100">
+        <%-include('../partials/navlogged') %>
+    
+        <h1 class="mb-3 text-white text-center" style="margin-top: 50px;">Eligible Tickets</h1>
+    
+        <div class="container py-5 h-100" style="max-width: 90%">
+            <div class="row d-flex justify-content-center h-100">
                 <div class="col col-xl-10">
-
-
-
-
-
-
-                <!-- Paste rest of the code -->
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-10 mx-auto">
-                                    <div class="career-search mb-60">
-                                        <div class="filter-result">
-                                            <% results.rows.forEach(function(data) { %>
-                                              <div class="job-box d-md-flex align-items-center justify-content-between mb-30" style="margin-top: 20px;">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-10 mx-auto">
+                                <div class="career-search mb-60">
+                                    <div class="filter-result">
+                                        <% results.rows.forEach(function(data) { %>
+                                            <div class="job-box d-md-flex align-items-center justify-content-between mb-30"
+                                                style="margin-top: 20px;">
                                                 <div class="job-left my-4 d-md-flex align-items-center flex-wrap">
                                                     <div class="job-content">
                                                         <ul>
-                                                          <h5 class="text-center text-md-left">Reservation ID: <%= data.reservationid %></h5>
+                                                            <h5 class="text-center text-md-left">Reservation ID: <%=
+                                                                    data.reservationid %>
+                                                            </h5>
                                                         </ul>
                                                         <ul>
-                                                            <h5 class="text-center text-md-left"><%= data.trainname %></h5>
-                                                          </ul>
-                                                        <ul class="d-md-flex flex-wrap text-capitalize ff-open-sans">
-                                                            <li class="mr-md-4">
-                                                                <i class="zmdi zmdi-pin mr-2"></i> <%= data.departure %>
-                                                            </li>
-                                                            <li class="mr-md-4">
-                                                                <i class="zmdi zmdi-pin mr-2"></i> <%= data.destination %>
-                                                            </li>
-                                                            
+                                                            <h5 class="text-center text-md-left">
+                                                                <%= data.trainname %>
+                                                            </h5>
                                                         </ul>
-                                                        <ul class="d-md-flex flex-wrap text-capitalize ff-open-sans">
+                                                        <ul
+                                                            class="d-md-flex flex-wrap text-capitalize ff-open-sans">
                                                             <li class="mr-md-4">
-                                                                <i class="fas fa-calendar"></i> <%= data.departuredate.toISOString().slice(0, 10)%>
+                                                                <i class="zmdi zmdi-pin mr-2"></i>
+                                                                <%= data.departure %>
                                                             </li>
                                                             <li class="mr-md-4">
-                                                                <i class="zmdi zmdi-time mr-2"></i> <%= data.departuretime.toISOString().slice(11, 16)%>
+                                                                <i class="zmdi zmdi-pin mr-2"></i>
+                                                                <%= data.destination %>
                                                             </li>
-                                                            <li class="mr-md-4">
-                                                              <i class="zmdi zmdi-time mr-2"></i> <%= data.arrivaltime.toISOString().slice(11, 16)%>
-                                                          </li>
                                                         </ul>
-                                                        
+                                                        <ul
+                                                            class="d-md-flex flex-wrap text-capitalize ff-open-sans">
+                                                            <li class="mr-md-4">
+                                                                <i class="fas fa-calendar"></i>
+                                                                <%= data.departuredate.toISOString().slice(0, 10)%>
+                                                            </li>
+                                                            <li class="mr-md-4">
+                                                                <i class="zmdi zmdi-time mr-2"></i>
+                                                                <%= data.departuretime.toISOString().slice(11, 16)%>
+                                                            </li>
+                                                            <li class="mr-md-4">
+                                                                <i class="zmdi zmdi-time mr-2"></i>
+                                                                <%= data.arrivaltime.toISOString().slice(11, 16)%>
+                                                            </li>
+                                                        </ul>
                                                     </div>
                                                 </div>
                                                 <ul>
-                                                    <li>
-                                                      
-                                                    <div class="job-right my-4 flex-shrink-0">
-                                                        <div >
-                                                          <form action="/user/showqr" method="post">
-                                                            <input type="hidden" maxlength="50" class="form-control" id="reservationid" name="reservationid" aria-describedby="emailHelp" value=<%=data.reservationid %> required>
-                                                            <button type="submit" class="btn d-block w-100 d-sm-inline-block btn-success" style="border-radius: 50px;">Generate Ticket</button>
-
-
-                                                        </form>
-                                                        </div>
-                                                    </div>
-                                                    </li>
                                                     
-                                                    <li>
-                                                    <div class="job-right my-4 flex-shrink-0">
-                                                      <div >
-                                                        <form action="/user/refundticket" method="post">
-                                                          <input type="hidden" maxlength="50" class="form-control" id="refundid" name="refundid" aria-describedby="emailHelp"
-                                                           value=<%=data.reservationid %> required>
-                                                           <button type="submit" class="btn d-block w-100 d-sm-inline-block btn-warning" style="border-radius: 50px;">Refund</button>
-
-                                                      </form>
-                                                      </div>
-                                                    </div>
-                                                    </li>
-                                                    </ul>
+                                                </ul>
                                             </div>
-                                                <% }); %>
-                                        </div>
+                                        <% }); %>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                <!-- Paste rest of the code -->
-
-
-
-
-
-
-
-
-                
-              </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </section>
-      </div>
-
-
-
-
-
-
-
-
-
-
+        </div>
+    </section>
     
 
 
 
-        <%-include('../partials/footer') %>
+
+
+
+
+
+
+
+
+
+
+
+    <%-include('../partials/footer') %>
 
 
 
